feat: SBT Phases 3+4+5 — source sets, codegen updates, native-packager
- Phase 3: Custom test configs (JakartaTest, JakartaIT, StacktraceTest, ThumbTest),
  replicate Gradle source exclusion lists, Java 17 toolchain
- Phase 4: Reconcile proto class list with Gradle, fix GXP source dir,
  guard generateFlags for missing config
- Phase 5: sbt-native-packager for installDist equivalent, smoke test tasks,
  parameterize smoke scripts for SBT paths

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>